--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ permalink: /
                 <i class="fa fa-flask" aria-hidden="true"></i>
                 <span class="sr-only">An image of a laboratory flask</span>
                 <h4>Research</h4>
-                <p>Conducting research on the representation, organization, and use of open data in the public sector.</p>
+                <p>Conducting research.</p>
                 <p><br><a href="research" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
