--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@ permalink:
             <div class="col-md-4">
                 <i class="fa fa-book" aria-hidden="true"></i>
                 <span class="sr-only">An image of a book</span>
-                <h4>Education</h4>
-                <p>Designing a curriculum for open data literacy and expertise, built on established, successful advances in data curation and data science education.</p>
+                <h4>About the Project</h4>
+                <p></p>
                 <p><br><a href="education" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-flask" aria-hidden="true"></i>
                 <span class="sr-only">An image of a laboratory flask</span>
-                <h4>Research</h4>
-                <p>Conducting research on the representation, organization, and use of open data in the public sector.</p>
+                <h4>Explore the Data</h4>
+                <p></p>
                 <p><br><a href="research" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-exchange" aria-hidden="true"></i>
                 <span class="sr-only">An image of an exchange</span>
-                <h4>Partnerships</h4>
-                <p>Partnering with organizations to provide students with practical field experiences and mentoring, including mechanisms for bringing practice-based knowledge back into the classroom.</p>
+                <h4>Join the Conversation</h4>
+                <p></p>
                 <p><br><a href="partners" class="btn btn-theme">More Info</a></p>
             </div>
         </div>
