--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ permalink:
     <div class="container">
         <div class="row centered">
             <div class="col-md-4">
-                <i class="fas fa-info-circle" aria-hidden="true"></i>
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
                 <span class="sr-only">An image of a book</span>
                 <h4>About the Project</h4>
                 <p></p>
