--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@ permalink:
                 <p><br><a href="education" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
-                <i class="fa fa-flask" aria-hidden="true"></i>
+                <i class="fa fa-database" aria-hidden="true"></i>
                 <span class="sr-only">An image of a laboratory flask</span>
                 <h4>Explore the Data</h4>
                 <p></p>
                 <p><br><a href="research" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
-                <i class="fa fa-exchange" aria-hidden="true"></i>
+                <i class="fa fa-comments" aria-hidden="true"></i>
                 <span class="sr-only">An image of an exchange</span>
                 <h4>Join the Conversation</h4>
                 <p></p>
