--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ permalink:
                 <p><br><a href="education" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
-                <i class="fa fa-database" aria-hidden="true"></i>
+                <i class="fa fa-chart-bar" aria-hidden="true"></i>
                 <span class="sr-only">An image of a laboratory flask</span>
                 <h4>Explore the Data</h4>
                 <p></p>
